--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
-        "openai-php/laravel": "^0.7.0|^1.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "openai-php/laravel": "^0.7.0 || ^1.0",
         "pusher/pusher-php-server": "^7.0"
     },
     "minimum-stability": "dev",
@@ -28,4 +28,5 @@
         }
     }
 }
+
 
