--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "fakrulhasan/smart-debugger",
   "description": "A Laravel package for advanced error debugging with Bengali AI suggestions and auto patch.",
+  "keywords": ["laravel", "debugger", "bangla", "error", "patch"],
   "type": "library",
   "license": "MIT",
   "authors": [
