--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.0",
         "illuminate/support": "^10.0|^11.0|^12.0",
-        "openai-php/laravel": "^0.7.0 || ^1.0",
+        "openai-php/laravel": "^1.1",
         "pusher/pusher-php-server": "^7.0"
     },
     "minimum-stability": "dev",
@@ -28,5 +28,3 @@
         }
     }
 }
-
-
